# TinyMPC_Gemmini

./: CMakeLists.txt  cmake_script.sh
examples/: CMakeLists.txt
include/Gemmini/: gemmini.h
src/tinympc/: CMakeLists.txt  admm.cpp  types.hpp
